--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 
                 <h2>Valores</h2>
                 <ul class="values">
-                    <li class="values_item values_item__customer">Proximidade ao cliente</li>
-                    <li class="values_item values_item__people">Reconhecimento de Pessoas</li>
-                    <li class="values_item values_item__commitment">Comprometimento</li>
-                    <li class="values_item values_item__excelence">Excelência no atendimento</li>
-                    <li class="values_item values_item__transparency">Transparência</li>
+                    <li class="values_item values_item-customer">Proximidade ao cliente</li>
+                    <li class="values_item values_item-people">Reconhecimento de Pessoas</li>
+                    <li class="values_item values_item-commitment">Comprometimento</li>
+                    <li class="values_item values_item-excelence">Excelência no atendimento</li>
+                    <li class="values_item values_item-transparency">Transparência</li>
                 </ul>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer container">
             <address>
                 <ul class="social_stack">
-                    <li class="social_stack__item social_stack__item-insta">vieirasoutoseguros</li>
-                    <li class="social_stack__item social_stack__item-mail">contato@vieirasoutoseguros.com.br</li>
-                    <li class="social_stack__item social_stack__item-whats">15 99189 3336</li>
+                    <li class="social_stack__item social_stack__item-insta"><a href="https://www.instagram.com/vieirasoutoseguros/">/vieirasoutoseguros</a></li>
+                    <li class="social_stack__item social_stack__item-mail"><a href="mailto:contato@vieirasoutoseguros.com.br">contato@vieirasoutoseguros.com.br</a></li>
+                    <li class="social_stack__item social_stack__item-whats"><a href="tel:+5515991893336">15 99189 3336</a></li>
                     <div class="footer__logo"></div>
-                    <p>2022 - Vieira Souto Seguros</p>
+                    <p class="footer__copy"><span>copyright</span> 2022 - Vieira Souto Seguros</p>
                 </ul>
             </address>
         </footer>
