Create and styling components

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Vieira Souto Seguros | Vida | Residencial | Pet</title>
         <link rel="stylesheet" href="assets/css/base.css">
+        <link rel="stylesheet" href="assets/css/components/socialstack.css">
+        <link rel="stylesheet" href="assets/css/components/card.css">
+        <link rel="stylesheet" href="assets/css/components/button.css">
         <link rel="stylesheet" href="assets/css/header.css">
         <link rel="stylesheet" href="assets/css/footer.css">
         <link rel="stylesheet" href="assets/css/home.css">
@@ -19,6 +22,58 @@
                 <h1 class="home-main__title">Os sonhos e conquistas são seus. Deixá-los seguros, é a nossa vocação</h1>
                 <p class="home-main__company_description">Nossa corretora é especializada em oferecer diversas modalidades de seguros e benefícios para pessoa física, jurídica ou autônoma. A nossa missão é ajudar os nossos clientes, parceiros e amigos em todos os momentos e assim, tornando a vida da sua família mais confortável e segura.</p>
             </section>
+
+            <section class="products container">
+                <h2 class="products__title">Produtos</h2>
+                <article class="card">
+                    <div class="card__top-bg"></div>
+                    <div>
+                        <div class="card__action-group">
+                            <h3 class="card__title">Vida</h3>
+                            <a class="secondary-button" href="#contact_info">Solicite uma cotação</a>
+                        </div>
+                        <div class="card__info-group">
+                            <p class="card__description">
+                                Quando perguntamos o que é seguro de vida, compreendemos que não é um investimento, mas sim de uma proteção social básica e indispensável a qualquer núcleo familiar. Estamos falando de um produto que vai muito além da cobertura contra morte.
+                            </p>
+                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="card__top-bg card__top-bg-pet"></div>
+                    <div>
+                        <div class="card__action-group">
+                            <h3 class="card__title">Seguro Pet</h3>
+                            <a class="secondary-button" href="#contact_info">Solicite uma cotação</a>
+                        </div>
+                        <div class="card__info-group">
+                            <p class="card__description">
+                                Ao solicitar um seguro para o seu animal de estimação, é possível incluir desde apenas as coberturas essenciais, como os atendimentos e procedimentos de emergência, até as coberturas mais  completas, como acupuntura e fisioterapia.
+                            </p>
+                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="card__top-bg card__top-bg-res"></div>
+                    <div>
+                        <div class="card__action-group">
+                            <h3 class="card__title">Seguro Residencial </h3>
+                            <a class="secondary-button" href="#contact_info">Solicite uma cotação</a>
+                        </div>
+                        <div class="card__info-group">
+                            <p class="card__description">
+                                O Seguro Residencial serve para tornar o seu lar ainda mais seguro, protegendo sua casa em eventuais adversidades. Seja para consertar um eletrodoméstico quebrado ou cobrir algo roubado, você pode contar sempre com esta segurança extra.
+                            </p>
+                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                        </div>
+                    </div>
+                </article>
+            </section>
+
             <section class="who_we_are">
                 <h2>Quem Somos</h2>
                 <h3>Missão</h3>
@@ -37,7 +92,7 @@
                 </ul>
             </section>
         </main>
-        <footer class="footer container">
+        <footer class="footer container" id="contact_info">
             <address>
                 <ul class="social_stack">
                     <li class="social_stack__item social_stack__item-insta"><a href="https://www.instagram.com/vieirasoutoseguros/">/vieirasoutoseguros</a></li>
