--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <p class="card__description">
                                 Quando perguntamos o que é seguro de vida, compreendemos que não é um investimento, mas sim de uma proteção social básica e indispensável a qualquer núcleo familiar. Estamos falando de um produto que vai muito além da cobertura contra morte.
                             </p>
-                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                            <a class="card__more-info" href="seguro-vida.html">saiba mais...</a>
                         </div>
                     </div>
                 </article>
@@ -52,7 +52,7 @@
                             <p class="card__description">
                                 Ao solicitar um seguro para o seu animal de estimação, é possível incluir desde apenas as coberturas essenciais, como os atendimentos e procedimentos de emergência, até as coberturas mais  completas, como acupuntura e fisioterapia.
                             </p>
-                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                            <a class="card__more-info" href="seguro-pet.html">saiba mais...</a>
                         </div>
                     </div>
                 </article>
@@ -68,7 +68,7 @@
                             <p class="card__description">
                                 O Seguro Residencial serve para tornar o seu lar ainda mais seguro, protegendo sua casa em eventuais adversidades. Seja para consertar um eletrodoméstico quebrado ou cobrir algo roubado, você pode contar sempre com esta segurança extra.
                             </p>
-                            <a class="card__more-info" href="#contact_info">saiba mais...</a>
+                            <a class="card__more-info" href="seguro-residencial.html">saiba mais...</a>
                         </div>
                     </div>
                 </article>
