Add link to AZOS on life insurance

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div>
                         <div class="card__action-group">
                             <h3 class="card__title">Vida</h3>
-                            <a class="secondary-button" href="#contact_info">Solicite uma cotação</a>
+                            <a class="secondary-button" target="_blank" href="http://www.azos.com.br/h/vieira-souto-v607bouw">Solicite uma cotação</a>
                         </div>
                         <div class="card__info-group">
                             <p class="card__description">
