--- a/seguro-pet.html
+++ b/seguro-pet.html
@@ -39,7 +39,7 @@
                         <li class="list_bg_text__item">entre outros</li>
                     </ul>
                 </div>
-            </section>
+            </article>
         </main>
         <footer class="footer container" id="contact_info">
             <address>
