--- a/seguro-residencial.html
+++ b/seguro-residencial.html
@@ -47,7 +47,7 @@
                         <li class="list_bg_text__item">Vendaval, granizo e impacto de veículos</li>
                     </ul>
                 </div>
-            </section>
+            </article>
         </main>
         <footer class="footer container" id="contact_info">
             <address>
