--- a/seguro-vida.html
+++ b/seguro-vida.html
@@ -36,7 +36,8 @@
                         <li class="list_bg_text__item">Doenças graves (como câncer, infarto agudo do miocárdio, AVC e cirurgia de revascularização do miocárdio mediante fixação de ponte vascular)</li>
                     </ul>
                 </div>
-            </section>
+                <a class="action-button" target="_blank" href="http://www.azos.com.br/h/vieira-souto-v607bouw">Solicite uma cotação online</a>
+            </article>
         </main>
         <footer class="footer container" id="contact_info">
             <address>
