Update cell. Add 24h warn

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </header>
         <main>
             <section class="home-main container">
-                <h1 class="home-main__title">Os sonhos e conquistas são seus. Deixá-los seguros, é a nossa vocação</h1>
+                <h1 class="home-main__title">Os sonhos e conquistas são seus. Deixá-los seguros, é a nossa vocação. Somos a Vieira Souto Corretora de Seguros.</h1>
                 <p class="home-main__company_description">Nossa corretora é especializada em oferecer diversas modalidades de seguros e benefícios para pessoa física, jurídica ou autônoma. A nossa missão é ajudar os nossos clientes, parceiros e amigos em todos os momentos e assim, tornando a vida da sua família mais confortável e segura.</p>
+
+                <p class="home-main__company_destaque">Atendemos 24h - Finais de Semana e Feriados.</p>
             </section>
 
             <section class="products container">
@@ -97,7 +99,7 @@
                 <ul class="social_stack">
                     <li class="social_stack__item social_stack__item-insta"><a href="https://www.instagram.com/vieirasoutoseguros/">/vieirasoutoseguros</a></li>
                     <li class="social_stack__item social_stack__item-mail"><a href="mailto:contato@vieirasoutoseguros.com.br">contato@vieirasoutoseguros.com.br</a></li>
-                    <li class="social_stack__item social_stack__item-whats"><a href="tel:+5515991893336">11 91469 0091</a></li>
+                    <li class="social_stack__item social_stack__item-whats"><a href="tel:+5511914690091">11 91469 0091</a></li>
                     <div class="footer__logo"></div>
                     <p class="footer__copy"><span>copyright</span> 2022 - Vieira Souto Seguros</p>
                 </ul>
