--- a/cotacao-locatario.html
+++ b/cotacao-locatario.html
@@ -63,7 +63,7 @@
             const valorComissaoSpan = document.getElementById("valor-comissao");
             const valorAluguelInput = document.getElementById("valor-aluguel");
             const whatsButton = document.getElementById("btn-whats");
-            const whatsAppBaseLink = "https://wa.me/5511914690091?lang=pt_br&text=";
+            const whatsAppBaseLink = "whatsapp://send?phone=5511914690091&lang=pt_br&text=";
             const whatsWebBaseLink = "https://web.whatsapp.com/send/?phone=5511914690091&type=phone_number&app_absent=0&text=";
             const nrFormatter = new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' });
             const zero = nrFormatter.format(0);
