--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vieira Souto Seguros | Vida | Residencial | Pet</title>
+        <title>Vieira Souto Seguros | Vida</title>
         <link rel="stylesheet" href="assets/css/base.css">
         <link rel="stylesheet" href="assets/css/components/socialstack.css">
         <link rel="stylesheet" href="assets/css/components/card.css">
